force-app/main/default/objects/SK_ACH_Valuation__c/SK_ACH_Valuation__c.object-meta.xml
<CustomObject>
    <label>Valuation</label>
    <pluralLabel>Valuations</pluralLabel>
    <nameField>
        <displayFormat>VAL-{0000}</displayFormat>
        <label>Valuation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>