force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Discount_Rate__c</fullName>
    <description>Discount rate used (for DCF)</description>
    <label>Discount Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>