force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_EBITDA_LTM__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_EBITDA_LTM__c</fullName>
    <label>EBITDA (LTM)</label>
    <description>Last Twelve Months EBITDA</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>