force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Enterprise_Value__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Enterprise_Value__c</fullName>
    <label>Enterprise Value</label>
    <description>Total enterprise value</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>