force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Fair_Value__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fair_Value__c</fullName>
    <description>Assessed fair value</description>
    <label>Fair Value</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>