force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Review_Date__c</fullName>
    <description>Date valuation was reviewed</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>