force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <description>User who reviewed valuation</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Valuations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>