force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Supporting_Documents__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Supporting_Documents__c</fullName>
    <label>Supporting Documents</label>
    <description>Link to valuation documentation</description>
    <type>Url</type>
</CustomField>