force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Third_Party_Valuation__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Third_Party_Valuation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether valued by 3rd party firm</description>
    <label>Third-Party Valuation</label>
    <type>Checkbox</type>
</CustomField>