force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Date__c</fullName>
    <label>Valuation Date</label>
    <description>As-of date for valuation</description>
    <required>true</required>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>