force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Firm__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Firm__c</fullName>
    <description>Name of valuation firm (if applicable)</description>
    <label>Valuation Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>