force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Investment__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Investment__c</fullName>
    <description>Investment being valued</description>
    <label>Investment</label>
    <referenceTo>SK_ACH_Investment__c</referenceTo>
    <relationshipLabel>Valuations</relationshipLabel>
    <relationshipName>Valuations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>