force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Method__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Method__c</fullName>
    <description>Methodology used</description>
    <label>Valuation Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Comparable</fullName>
                <default>true</default>
                <label>Market Comparable</label>
            </value>
            <value>
                <fullName>Discounted Cash Flow</fullName>
            </value>
            <value>
                <fullName>Recent Transaction</fullName>
            </value>
            <value>
                <fullName>Cost Basis</fullName>
            </value>
            <value>
                <fullName>Liquidation Value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>