force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Notes__c</fullName>
    <description>Key assumptions and notes</description>
    <label>Valuation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>