force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Status__c</fullName>
    <label>Status</label>
    <description>Current status</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>