force-app/main/default/objects/SK_ACH_Valuation__c/fields/SK_ACH_Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Valuation_Type__c</fullName>
    <description>Type of valuation</description>
    <label>Valuation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
                <default>true</default>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Event-Driven</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>