force-app/main/default/objects/SK_ACH_Valuation__c/validationRules/Fair_Value_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Fair_Value_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Fair value must be greater than or equal to zero</description>
    <errorConditionFormula>SK_ACH_Fair_Value__c &lt; 0</errorConditionFormula>
    <errorMessage>Fair value cannot be negative.</errorMessage>
</ValidationRule>